feat(agent): add durable SSE and workspace recovery